@@ -5,4 +5,5 @@ README
 t/original.t
 t/tie.t
 t/const.t
+t/import.t
 lib/ex/constant/vars.pm
